src/app/app.component.css
body {
    font-family: 'Source Sans Pro', 'Segoe UI', 'Helvetica Neue', Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
}

.cibus-img {
    background-repeat: no-repeat;
    background-size: contain;
    width: 100%;
    height: auto;
}

.nav-link-style {
    font-size: 1.2em;
    transition: 0.5s
}

.navbar {
    overflow: hidden;
    position: sticky;
    width: 100%;
    top: 0;
    left: 0;
    right: 0;
    box-shadow: 0 4px 4px -4px #A8A8A8;
    z-index: 2;
}

.box {
    width: 125px;
    height: 130px;
    position: fixed;
}

.green {
    top: 0px;
    left: 40px;
    background-color: rgb(19, 83, 6);
    z-index: 3;
    border-top: none;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.cibus-text {
    font-size: 2rem;
    font-weight: bold;
    color: white;
    text-align: center;
    padding-top: 50%
}

.padding-left {
    padding-left: 60%;
}

@media screen and (max-width: 768px) {
    .box {
        visibility: hidden;
    }
    .green {
        visibility: hidden;
    }
}

@media screen and (max-width: 900px) {
    .padding-left {
        padding-left: 35%;
    }
}

